--- a/src/Components/AddProductForm/addProductForm.module.css
+++ b/src/Components/AddProductForm/addProductForm.module.css
@@ -12,13 +12,29 @@
     align-items: center;
 }
 
-.addProductForm>h2 {
+.addProductForm > .closeBtn {
+    display: flex;
+    gap: 10px;
+}
+
+.addProductForm> .closeBtn > h2 {
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
     line-height: 52px;
     color: #000000;
+}
+
+.closeBtn > button {
+    margin-left: 2rem;
+    margin-top: 10px;
+    width: 40px;
+    height: 30px;
+}
+
+.closeBtn > button > span {
+    font-size: 25px;
 }
 
 .addProductForm>form>input {
