--- a/src/Components/Navbar/navbar.module.css
+++ b/src/Components/Navbar/navbar.module.css
@@ -57,3 +57,13 @@
     line-height: 31px;
     color: #FFFFFF;
 }
+
+@media (max-width:700px) {
+    .navbarContainer {
+        height: 60px;
+        min-width: 350px;
+        max-width: 700px;
+        width: 100vw;
+    }
+
+}
