--- a/src/Components/EditProductForm/editProductForm.module.css
+++ b/src/Components/EditProductForm/editProductForm.module.css
@@ -67,3 +67,11 @@
 button>span {
     color: white;
 }
+
+@media (max-width:440px) {
+    .addProductForm {
+        margin-left: 25vw;
+        width: 70vw;
+    }
+
+}
