--- a/src/Components/RegisterForm/registerForm.module.css
+++ b/src/Components/RegisterForm/registerForm.module.css
@@ -63,3 +63,13 @@ button {
 button > span {
     color: white;
 }
+
+@media (max-width:570px) {
+
+    .registerFormContainer{
+        height:90vw;
+        width: 85vw;
+    }
+
+}
+
