--- a/src/pages/Register/register.module.css
+++ b/src/pages/Register/register.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 
-.registerContainer > h1 {
+.registerContainer>h1 {
     margin-top: 10vh;
     margin-left: 34vw;
     font-size: 40px;
@@ -14,13 +14,13 @@
     font-weight: 500;
 }
 
-.registerContainer> p {
+.registerContainer>p {
     margin-left: 34vw;
     font-size: 20px;
 }
 
-.registerContainer > h1,
-.registerContainer> p {
+.registerContainer>h1,
+.registerContainer>p {
     color: white;
     font-family: 'DM Sans';
     font-style: normal;
@@ -28,4 +28,15 @@
 
 .registerForm {
     margin: 30px;
+}
+
+@media (max-width:570px) {
+
+    .registerContainer>h1,
+    .registerContainer>p {
+        margin-left: 12vw;
+        max-width: 300px;
+    }
+
+
 }
