added hover effect for all buttons in the App

--- a/src/Components/AddProductForm/addProductForm.module.css
+++ b/src/Components/AddProductForm/addProductForm.module.css
@@ -64,6 +64,10 @@
     height: 30px;
 }
 
+.addProductForm > button:hover{
+    background-color: #7485c0;
+}
+
 button>span {
     color: white;
 }
