--- a/src/Components/RegisterForm/registerForm.module.css
+++ b/src/Components/RegisterForm/registerForm.module.css
@@ -60,6 +60,10 @@ button {
     margin: 4px;
 }
 
+.registerFormContainer button:hover{
+    background-color: #7485c0;
+}
+
 button > span {
     color: white;
 }
